--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires      = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "invian2"
+name = "invian"
 version = "0.0.1"
 description="Package to analyze in vivo neural data"
 readme = "README.md"
